9. Основное задание: продолжаем разметку личного проекта

--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Глэйси: магазин мороженого</title>
+    <style type="text/css">body {
+      background-color: #9dac9b; }</style>
   </head>
   <body>
     <header class="main-header">
@@ -29,7 +31,7 @@
             <a class="user-navigation__link" href=""><img src="img/entrance.svg" width="21" height="19" alt="#">Вход</a>
           </li>
           <li class="user-navigation__item basket">
-            <a class="user-navigation__link" href=""><img src="img/basket-red.svg" width="21" height="20" alt="#">Корзина</a>
+            <a class="user-navigation__link" href=""><img src="img/basket-red.svg" width="21" height="20" alt="#">2 товара</a>
           </li>
         </ul>
       </nav>
@@ -59,6 +61,7 @@
               <span class="price__weight">/кг</span>
               <a class="price__link" href="#"><img src="img/product-1.png" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой"></a>
             </p>
+            <a class="catalog__button" href="#">Быстрый просмотр</a>
           </li>
           <li class="catalog__item">
             <h3><a href="#">Сливочно-кофейное с кусочками шоколада</a></h3>
@@ -67,6 +70,7 @@
               <span class="price__weight">/кг</span>
               <a class="price__link" href="#"><img src="img/product-2.png" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада"></a>
             </p>
+            <a class="catalog__button" href="#">Быстрый просмотр</a>
           </li>
           <li class="catalog__item">
             <h3><a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a></h3>
@@ -75,6 +79,7 @@
               <span class="price__weight">/кг</span>
               <a class="price__link" href="#"><img src="img/product-3.png" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада"></a>
             </p>
+            <a class="catalog__button" href="#">Быстрый просмотр</a>
           </li>
           <li class="catalog__item">
             <h3><a href="#">Сливочное крем-брюле с карамельной подливкой</a></h3>
@@ -83,6 +88,7 @@
               <span class="price__weight">/кг</span>
               <a class="price__link" href="#"><img src="img/product-4.png" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой"></a>
             </p>
+            <a class="catalog__button" href="#">Быстрый просмотр</a>
           </li>
           <li class="catalog__item">
             <h3><a href="#">Сливочное с брусничным джемом</a></h3>
@@ -91,6 +97,7 @@
               <span class="price__weight">/кг</span>
               <a class="price__link" href="#"><img src="img/product-5.png" width="267" height="267" alt="Сливочное с брусничным джемом"></a>
             </p>
+            <a class="catalog__button" href="#">Быстрый просмотр</a>
           </li>
           <li class="catalog__item">
             <h3><a href="#">Сливочно-черничное с цельными ягодами черники</a></h3>
@@ -99,6 +106,7 @@
               <span class="price__weight">/кг</span>
               <a class="price__link" href="#"><img src="img/product-6.png" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники"></a>
             </p>
+            <a class="catalog__button" href="#">Быстрый просмотр</a>
           </li>
           <li class="catalog__item">
             <h3><a href="#">Сливочно-лимонное с карамельной присыпкой</a></h3>
@@ -107,6 +115,7 @@
               <span class="price__weight">/кг</span>
               <a class="price__link" href="#"><img src="img/product-7.png" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой"></a>
             </p>
+            <a class="catalog__button" href="#">Быстрый просмотр</a>
           </li>
           <li class="catalog__item">
             <h3><a href="#">Сливочное с шоколадной стружкой</a></h3>
@@ -115,6 +124,7 @@
               <span class="price__weight">/кг</span>
               <a class="price__link" href="#"><img src="img/product-8.png" width="267" height="267" alt="Сливочное с шоколадной стружкой"></a>
             </p>
+            <a class="catalog__button" href="#">Быстрый просмотр</a>
           </li>
           <li class="catalog__item">
             <h3><a href="#">Сливочно-ванильное с кусочками шоколада</a></h3>
@@ -123,6 +133,7 @@
               <span class="price__weight">/кг</span>
               <a class="price__link" href="#"><img src="img/product-9.png" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада"></a>
             </p>
+            <a class="catalog__button" href="#">Быстрый просмотр</a>
           </li>
           <li class="catalog__item">
             <h3><a href="#">Сливочноe с ментоловым сиропом</a></h3>
@@ -131,6 +142,7 @@
               <span class="price__weight">/кг</span>
               <a class="price__link" href="#"><img src="img/product-10.png" width="267" height="267" alt="Сливочноe с ментоловым сиропом"></a>
             </p>
+            <a class="catalog__button" href="#">Быстрый просмотр</a>
           </li>
           <li class="catalog__item">
             <h3><a href="#">Сливочное с кусочками черного шоколада</a></h3>
@@ -139,6 +151,7 @@
               <span class="price__weight">/кг</span>
               <a class="price__link" href="#"><img src="img/product-11.png" width="267" height="267" alt="Сливочное с кусочками черного шоколада"></a>
             </p>
+            <a class="catalog__button" href="#">Быстрый просмотр</a>
           </li>
           <li class="catalog__item">
             <h3><a href="#">Сливочное с мятным сиропом</a></h3>
@@ -147,6 +160,27 @@
               <span class="price__weight">/кг</span>
               <a class="price__link" href="#"><img src="img/product-12.png" width="267" height="267" alt="Сливочное с мятным сиропом"></a>
             </p>
+            <a class="catalog__button" href="#">Быстрый просмотр</a>
+          </li>
+        </ul>
+        <ul class="pagination">
+          <li>
+            <a class="pagination__item--current  link-active">1</a>
+          </li>
+          <li>
+            <a class="pagination__item" href="#">2</a>
+          </li>
+          <li>
+            <a class="pagination__item" href="#">3</a>
+          </li>
+          <li>
+            <a class="pagination__item" href="#">4</a>
+          </li>
+          <li>
+            <a class="pagination__item" href="#">5</a>
+          </li>
+          <li>
+            <a class="pagination__item--next" href="#">Следующая</a>
           </li>
         </ul>
       <!-- Здесь будет пагинация -->
@@ -189,12 +223,57 @@
           <a class="additional-info__link"  href="#">Экологические стандарты</a>
         </li>
       </ul>
-      <p class="main-footer__copyright copyright">
-        <a class="copyright__link hmlacademy-logo"  href="https://htmlacademy.ru/intensive/htmlcss">
-          <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="Логотип HTML Academy">
-        </a>
-        <span>Сделано в <a class="button" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> &#169; 2019</span>
-      </p>
+      <a class="main-footer__copyright copyright"  href="https://htmlacademy.ru/intensive/htmlcss">
+        <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="Логотип HTML Academy">
+        <p>Сделано в HTML Academy  &#169; 2019</p>
+      </a>
     </footer>
+    <section class="search-modal-window visually-hidden">
+      <form class="search-modal-window__form search-form" action="https://echo.htmlacademy.ru" method="post">
+        <label class="visually-hidden" for="search">Поиск по сайту</label>
+        <input class="search-modal-window__input" id="search" type="search" name="search" placeholder="Что ищем?">
+      </form>
+    </section>
+    <section class="login-modal-window visually-hidden">
+      <h2 class="visually-hidden">Личный кабинет</h2>
+      <form class="login-modal-window__form" action="https://echo.htmlacademy.ru" method="post">
+        <p>
+          <label class="visually-hidden" for="user-login">Электронная почта</label>
+          <input class="login-modal-window__input" id="user-login" type="text" name="login" placeholder="Электронная почта">
+        </p>
+        <p>
+          <label class="visually-hidden" for="user-password">Пароль</label>
+          <input class="login-modal-window__input" id="user-password" type="password" name="password" placeholder="Пароль">
+        </p>
+        <a class="login-modal-window__link" href="#">Забыли пароль?</a>
+        <a class="login-modal-window__link" href="#">Новая регистрация</a>
+        <button class="button" type="submit">
+          Войти
+        </button>
+      </form>
+    </section>
+    <section class="basket-modal-window visually-hidden">
+      <h2 class="visually-hidden">Содержимое корзины</h2>
+      <table class="basket-modal-window__table">
+        <tr>
+          <td><a href="#">Удалить из корзины</a></td>
+          <td>
+            <img src="img/product-1.png" width="33" height="33" alt="#">
+            <p>Пломбир с апельсиновым джемом</p>
+          </td>
+          <td>1,5 кг х <span>200 руб.</span></td>
+          <td>300 руб.</td>
+        </tr>
+        <tr>
+          <td><a href="#">Удалить из корзины</a></td>
+          <td>
+            <img src="img/product-3.png" width="33" height="33" alt="#">
+            <p>Клубничный пломбир с присыпкой из белого шоколада</p>
+          </td>
+          <td>1,5 кг х <span>300 руб.</span></td>
+          <td>450 руб.</td>
+        </tr>
+      </table>
+    </section>
   </body>
 </html>
